show submenu links unique menu link

--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,7 @@ p {
 .btn {
 	font-size: 1rem;
 	padding: 0.25rem 0.75rem;
-	border-radius: var(--radius);
+	border-radius: 20px;
 	border-color: transparent;
 	color: white;
 	background: var(--clr-black);
