show submenu when mouse over link

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ Global Styles
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	overflow-x: hidden;
 }
 body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -119,7 +120,6 @@ p {
 		line-height: 1;
 	}
 }
-/*  global classes */
 
 /* section */
 .section {
